Revert "feat: 공간 조건 적용 사용성 개선 (#963)"
This reverts commit 154cb8a183b458b56fa34e1cbd4402c11cd13223.